# ip-cores

./: .gitignore  2QCache.vhd  6805.vhd  8b10_dec.vhd  8b10_enc.vhd  ALU.vhd  AUTHORS  AdcRecv.bsf  AnalogBus.vhd  Analyser.vhd  AntiLog2.v  BTCMiner.java  BUGS  BUILD_NEXYS4  Bresenhamer.cmd_log  Bresenhamer.ngc  Bresenhamer.ngr  Bresenhamer.prj  Bresenhamer.syr  Bresenhamer.vhd  Bresenhamer.vhi  Bresenhamer.xst  Bresenhamer_envsettings.html  Bresenhamer_summary.html  Bresenhamer_xst.xrpt  Bresenhammer_Sim.vhd  Bresenhammer_Sim_beh.prj  Bresenhammer_Sim_isim_beh.wdb  Bresenhammer_Sim_isim_beh1.wdb  Bresenhammer_Sim_stx_beh.prj  Buttons_VHDL.vhd  CCITT4_v2.ngc  CCITT4_v2.sym  CCITT4_v2_synthesis.vhd  CHANGELOG  CHANGELOG.txt  CI_ALTFP_ADD_SUB.vhd  CI_ALTFP_DIV.vhd  CI_ALTFP_MULT.vhd  CI_complex_core.vhd  (+1106 more)
1942/: 1942.v  computer_1942.v  dump.cc  gather  log2wav.cc  pwm2log.cc  readme
1_instruction_fetching/: if_id_registers.vhd  instruction_fetching.vhd  instruction_memory.vhd  reg.vhd
2_instruction_decoding/: control_unit.vhd  id_ex_registers.vhd  instruction_decoding.vhd  registers.vhd
3_execution/: alu.vhd  alu_1bit.vhd  alu_control.vhd  ex_mem_registers.vhd  execution.vhd
4_memory_access/: data_memory.vhd  mem_wb_registers.vhd  memory_access.vhd
5_write_back/: write_back.vhd
8b10b/: decode.v  encode.v  validate_8b10b.v
ARP/: arp_parser.vhd  arp_response.vhd  arp_top.vhd
ActiveHDL Testbench/: sha2_TB.vhd
AdcDriver/: d_DCM.xaw  d_Driver_ADC.v  d_Driver_ADCRamBuffer.v  d_Driver_RamBuffer.v
Assem/: ASSEM.C  ASSEM.~C  CODE.HEX  TestProg.asm  TestProg2.asm  TestProg3.asm  TestProg3_64.asm  TinyX.prj  testprog3.asm.HEX
BENCH/: USFFT64_2B_TB.v  sin_tst_rom.v  sinerom64_gen.pl  tb_ALU_simple.vhd  tb_add_sub_x16.vhd  tb_binary_counter_x16.vhd  tb_bus_register_x16.vhd  tb_generic_const_rdecal_x16.vhd  tb_inverser_x16.vhd  tb_rdecal_x16.vhd  tb_single_rdecal_x16.vhd
BUILD_SCC/: Makefile
Balance/: balance.vhd  balance_top.vhd  balance_top.vhd.bak  hash.vhd  n_mac.vhd  n_mac.vhd.bak
CAD libraries/: Mech_Umriss_Panel.GM1  part-list.xls
CODE/: MEM_PKG.VHD  SPMEM.VHD
CODEC/: dp_ram.vhd  receive_fifo.vhd  receiver.vhd  socwire_codec.vhd  state_machine.vhd  transmit_fifo.vhd  transmitter.vhd
CONNECT6_CMDLINE/: Makefile  connect6.cpp  connect6_golden.cpp  connect6_golden.h  connect6_synth.cpp  connect6_synth.h  main.cpp
CONNECTK/connectk-2.0/: AUTHORS  Makefile  Makefile.am  Makefile.in  NEWS  README  config.h  config.h.in  config.status  configure  configure.ac
CONNECTK/connectk-2.0/.deps/: ai.Po  connectk.Po  dialogs.Po  draw.Po  file.Po  mesh.Po  montec.Po  search.Po  sequences.Po  serial_port.Po  state.Po  tests.Po  thread.Po  threats.Po  window.Po
CONNECTK/connectk-2.0/src/: connectk.c  connectk.h  dialogs.c  draw.c  file.c  shared.h  state.c  tests.c
CONNECTK/connectk-2.0/src/ai/: ai.c  mesh.c  montec.c  search.c  sequences.c  serial_port.c  thread.c  threats.c  window.c
CONNECTK/connectk-2.0/win32/: README.txt  config.h  vs7.sln  vs7.vcproj
CTOOL/: hexdasm.c
C_implementation/: README_32bit.txt  README_64bit.txt  firstexample.tex  ginv.c  gwt.c  gwt.exe.out.txt  makefile  md6.h  md6_compress.s  md6_mode.c  md6_test.c  md6sum.c  secondexample.tex  t.c  testmemcpy.c  thirdexample.tex  treewalk.py
Circuit/: alu.vhd  aluAndRegs.vhd  branchStack.vhd  (+9 more)
Software/adv_jtag_bridge/: BUILDING  BUILDING.classic  Makefile.am  Makefile.classic  adv_dbg_commands.c  adv_dbg_commands.h  adv_jtag_bridge.c  adv_jtag_bridge.h  altera_virtual_jtag.h  autogen.sh  bsdl.c  bsdl.h  bsdl_parse.c  bsdl_parse.h  cable_common.c  cable_common.h  cable_ft2232.c  cable_ft2232.h  cable_ft245.c  cable_ft245.h  cable_parallel.c  cable_parallel.h  cable_sim.c  cable_sim.h  cable_usbblaster.c  cable_usbblaster.h  cable_usbblaster_ftdi.c  cable_xpc_dlc9.c  cable_xpc_dlc9.h  chain_commands.c  chain_commands.h  configure.ac  dbg_api.c  dbg_api.h  errcodes.c  errcodes.h  except.h  hardware_monitor.c  hardware_monitor.h  hwp_server.c  (+13 more)
Software/adv_jtag_bridge/doc/src/: adv_jtag_bridge.odt  ajb_block_diagram.odg
Software/adv_jtag_bridge/sim_lib/: Makefile
Software/adv_jtag_bridge/sim_lib/icarus/: Makefile
Software/adv_jtag_bridge/sim_lib/modelsim_linux_x86/: Makefile
Software/adv_jtag_bridge/sim_lib/modelsim_win32/: Makefile
Software/adv_jtag_bridge/sim_lib/src/: jp-io-vpi.c
Software/adv_jtag_bridge/sim_rtl/: dbg_comm.v  dbg_comm_vpi.v
toolchain/scarts-binutils/binutils-2.19.1/cgen/: AUTHORS  COPYING.CGEN  ChangeLog  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  attr.scm  cgen-doc.scm  cgen-gas.scm  cgen-intrinsics.scm  cgen-opc.scm  cgen-sid.scm  cgen-sim.scm  cgen-stest.scm  cgen-testsuite.scm  configure  configure.in  cos-pprint.scm  cos.scm  decode.scm  desc-cpu.scm  desc.scm  dev.scm  enum.scm  gas-test.scm  gen-all-desc  gen-all-doc  gen-all-intrinsics  gen-all-opcodes  gen-all-sid  gen-all-sim  guile.scm  hardware.scm  html.scm  ifield.scm  iformat.scm  insn.scm  intrinsics.scm  (+38 more)
toolchain/scarts-binutils/binutils-2.19.1/cgen/cpu/: arm.cpu  arm.sim  arm7.cpu  fr30.cpu  fr30.opc  i960.cpu  i960.opc  ia32.cpu  ia64.cpu  ip2k.cpu  ip2k.opc  m68k.cpu  mep-avc.cpu  mep-avc2.cpu  mep-core.cpu  mep-fmax.cpu  mep-h1.cpu  mep-ivc2.cpu  mep-rhcop.cpu  mep-sample-ucidsp.cpu  mep.opc  openrisc.cpu  openrisc.opc  play.cpu  play.opc  powerpc.cpu  sh-sid.cpu  sh.cpu  sh.opc  sh64-compact.cpu  sh64-media.cpu  simplify.inc  sparc.cpu  sparc.opc  sparc32.cpu  sparc64.cpu  sparccom.cpu  sparcfpu.cpu  thumb.cpu  xc16x.cpu  (+2 more)
toolchain/scarts-binutils/binutils-2.19.1/cgen/doc/: Makefile.am  Makefile.in  app.texi  cgen.texi  cgenint.texi  credits.texi  glossary.texi  intro.texi  notes.texi  opcodes.texi  pmacros.texi  porting.texi  rtl.texi  running.texi  sim.texi  stamp-vti  version.texi
toolchain/scarts-binutils/binutils-2.19.1/cgen/slib/: genwrite.scm  logical.scm  pp.scm  random.scm  sort.scm
toolchain/scarts-binutils/binutils-2.19.1/cgen/testsuite/: Makefile.am  Makefile.in  location-1.test  names-comments-1.test  pmacros-1.test  run-tests.sh  test-utils.sh.in  testsuite.cpu
(+39854 files in other folders)
