dnl Process this file with autoconf to produce a configure script.

AC_PREREQ(2.59)
AC_INIT(read.scm)
AC_CANONICAL_SYSTEM
dnl The "50" is a generic indicator that we're between 1.1 and 1.2.
AM_INIT_AUTOMAKE(cgen, 1.1.50)

AC_PROG_INSTALL
AC_EXEEXT

# Set target cpu.
arch=${target_cpu}
AC_SUBST(arch)

AM_MAINTAINER_MODE

# See doc/Makefile.am.
AM_CONDITIONAL(GENINSRC_NEVER, false)

AC_OUTPUT([Makefile doc/Makefile testsuite/Makefile testsuite/test-utils.sh])
